# thesis-writer-v1

./: .env  README.md  alembic.ini  docker-compose.yml  findings.md  phase1_check.db  progress.md  pyproject.toml  task_plan.md  分阶段实施计划.md  实施方案.md
.agents/skills/phase-driven-delivery/: SKILL.md
.github/: copilot-instructions.md
ai_ppt_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/: README.md
apps/api/src/app/: config.py  main.py  state.py
apps/api/tests/: helpers.py  test_artifact_persistence.py  test_database_migrations.py  test_sample_registry.py  test_svg_renderer.py  test_svg_validator.py  test_template_registry.py
apps/web/: README.md  index.html  projects.html  server.py  workspace.html
apps/web/src/: styles.css
apps/web/src/lib/: api.js  formatters.js
docs/architecture/: api-contracts.md  conventions.md  data-models.md  database-schema.md  deployment-checklist.md  project-state-machine.md  tech-stack.md
migrations/: README  env.py
migrations/versions/: 20260325_0001_initial_schema.py
storage/: brief_validation.db  outline_validation.db  test-debug.db  thesis_writer.db  thesis_writer_files.db
storage/projects/: sample-registry.json
storage/uploads/31f92c6d-61f2-4de4-846f-70957992c246/: 776056a0886e4d1689aec681e07c100c-government-reporting-pack.md
storage/uploads/393ad7bd-d0cd-499a-be6a-17c8dad0f7dc/: bacabb9b36414f58b3d7891481b18679-broken.url
templates/builtin/: academic-defense.json  consulting-clean.json  consulting-premium.json  government-blue.json  research-paper.json  technology-grid.json
thesis_writer_v1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+2703 files in other folders)
