[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-writer-v1"
version = "0.1.0"
description = "Thesis writer monorepo for research-to-presentation generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "httpx>=0.28,<0.29",
  "pytest>=8.3,<9.0",
  "pypdf>=5.4,<6.0",
  "python-docx>=1.1,<2.0",
  "python-pptx>=1.0,<2.0",
  "cairosvg>=2.7,<3.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["apps/api/src", "packages/core-types/src", "packages/ingestion/src", "packages/methodology-engine/src"]
include = ["app*", "core_types*", "ingestion*", "methodology_engine*"]
